--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -22,4 +22,5 @@
     <string name="details">详细</string>
     <string name="language">语言</string>
     <string name="about">关于</string>
+    <string name="default_lang">跟随系统</string>
 </resources>
