--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,11 @@
     <string name="english" translatable="false">English</string>
     <string name="default_lang">Default</string>
     <string name="size">Size</string>
+    <!--String for AboutActivity-->
+    <string name="version">Version: 1.0.0 Beta</string>
+    <string name="description">A quick and simple Zip tool</string>
+    <string name="myinfo" translatable="false">Seraphcex GitHub:github.com/Seraphcex</string>
+    <string name="thanks">Special thanks to XunselF for all his help during my work,you can also check out his GitHub:github.com/XunselF</string>
+    <string name="rights">All Rights Reserved</string>
 
 </resources>
